fixing up blogs and SEO

--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -1,21 +1,18 @@
 ---
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth"
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Navigating the Attention Economy: Captivate and Convert Audiences"
+description: "Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
+date: "2021-11-03"
+featuredImage: "../../images/blog/attention-economy-multi-screens.jpg"
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
 import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
 import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+  title: "Navigating the Attention Economy: Captivate and Convert Audiences",
+  description: "Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
 };
 
 <Wrapper seo={meta}>
@@ -54,7 +51,7 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   # **So, What Will It Take?**
 
-  Winning in the attention economy means [**directly incentivizing and rewarding**](https://www.fyncom.com/lead-nurturing-campaigns) consumers to pay their much-valued attention to your content. Here's how to do that.
+  Winning in the attention economy means <Link to={"/marketing-use-cases"}>**directly incentivizing and rewarding**</Link> consumers to pay their much-valued attention to your content. Here's how to do that.
 
   - Target a much smaller, niche audience. This will most likely be a subset of a larger audience with one specific, common trait.
   - Discover an action trigger that will be compelling enough to stop the user from roaming away from your interaction.
@@ -63,10 +60,10 @@ description: "Explore the evolution of the attention economy and uncover cutting
   - Ask for referrals from delighted customers.
   - Analyze, optimize, and repeat the campaigns.
 
-  Consumers will continue to being blasted with digital ads daily. And companies will continue strategizing to win their customers' attention. But fighting for attention in an oversaturated media landscape will prove to be less effective for advertisers in the long run. [Rewards campaigns](https://www.fyncom.com/) are highly effective not only in capturing attention, but actually increasing attention span and bolstering brand loyalty among audiences.
+  Consumers will continue to being blasted with digital ads daily. And companies will continue strategizing to win their customers' attention. But fighting for attention in an oversaturated media landscape will prove to be less effective for advertisers in the long run. <Link to={"/"}>Rewards campaigns</Link> are highly effective not only in capturing attention, but actually increasing attention span and bolstering brand loyalty among audiences.
 
   After all, if attention is such a valuable commodity, brands might as well **pay consumers for paying attention.**
 
-  [Get in touch](https://www.fyncom.com/chat-with-us) with us to learn how to engage your audience with your own personalized rewards campaign.
+  <Link to={"/contact"}>Get in touch</Link> with us to learn how to engage your audience with your own personalized rewards campaign.
 
 </Wrapper>
