--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Email Scams: Protection Tactics and Profitable Solutions"
 description: "Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
-date: "2023-11-14"
+date: "2023-01-04"
 featuredImage: "../../images/illustrations/inbox-money.png"
 ---
 
@@ -25,7 +25,7 @@ description: "Discover how you can turn the tide on email spam with FynCom's inn
       <img src={inboxMoney} alt="Understand your customers better" />
     </div>
     <div className="use-case-description">
-      To us, it doesn't really matter. It's either powered by FynCom (**which adds real cash to the interaction**) or it's not. Based on recent trends, we are considering bringing our[patented "FynCom Filter" technology](https://patents.google.com/patent/US11310368B2) to emails - **allowing you to get instantly paid for every spam email you allow us to block**. First, we need you to vote with your wallets or your signups.
+      To us, it doesn't really matter. It's either powered by FynCom (**which adds real cash to the interaction**) or it's not. Based on recent trends, we are considering bringing our [patented "FynCom Filter" technology](https://patents.google.com/patent/US11310368B2) to emails - **allowing you to get instantly paid for every spam email you allow us to block**. First, we need you to vote with your wallets or your signups.
     </div>
   </div>
 
@@ -68,7 +68,7 @@ description: "Discover how you can turn the tide on email spam with FynCom's inn
   ## **Why & What's in it for me?**
 
   1. I'M SICK OF GETTING SPAM EMAILS.
-  2. The future is headed towards a society that will require some form of "REFUNDABLE financial deposit" in order to email / call / text / DM / cold contact someone. We predicted this years ago with our first [white paper](https://karmacall.com/KarmaCallWhitePaper.pdf), and have staked our entire business model around being that financial lubricant that will sustain this ecosystem.
+  2. The future is headed towards a society that will require some form of "REFUNDABLE financial deposit" in order to email / call / text / DM / cold contact someone. We predicted this years ago with our first <Link to={"/white-paper-original-scam-calls"}>white paper</Link>, and have staked our entire business model around being that financial lubricant that will sustain this ecosystem.
   3. This will help us get more awareness regarding our business facing products.
   4. Specifically, we want to make it known that FynCom Filters can be used in any form of direct communications between two parties like DMs, group DMs, etc. _ **Twitter / Discord / Telegram - We see you & want to help!** _
 
