--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -77,11 +77,10 @@ There are many sources of information - especially on the Internet - that demand
 This presents a new challenge for brands. We are all competing for more attention at a time when attention spans are shrinking. How can you do this? By distinguishing your brand with something that customers actually feel they benefit from.
 
 
-When implemented correctly, [rewards programs do build more loyal customers](https://www.bing.com/search?q=rewards%20cause%20people%20to%20spend%20more&qs=n&form=QBRE&msbsrank=2_2__0&sp=-1&pq=rewards%20cause%20people%20to%20spend%20more&sc=2-34&sk=&cvid=629372EFBC564C05AEF15B923B272C5A) while remaining affordable. When these rewards are coupled with customer feedback surveys, businesses have a unique opportunity to hit two birds with one stone: build a more loyal audience **through** the process of collecting valuable data.
+When implemented correctly, [rewards programs do build more loyal customers](https://www.bankrate.com/finance/credit-cards/spending-with-a-credit-card) while remaining affordable. When these rewards are coupled with customer feedback surveys, businesses have a unique opportunity to hit two birds with one stone: build a more loyal audience **through** the process of collecting valuable data.
 
 
   <img src={signStick} alt="Signage sticks" />
 
-
-[Get in touch](https://www.fyncom.com/chat-with-us) with us to learn how to engage your audience with your own personalized rewards campaign.
+  <Link to={"/contact"}>Get in touch</Link> with us to learn how to engage your audience with your own personalized rewards campaign.
 </Wrapper>
