--- a/src/pages/blog/gamify-rewards-program.mdx
+++ b/src/pages/blog/gamify-rewards-program.mdx
@@ -1,20 +1,17 @@
 ---
-title: "Gamify Rewards Program"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Elevate Engagement with Gamified Rewards"
+date: "2023-01-10"
+featuredImage: "../../images/illustrations/gamification-01.png"
+description: "Transform your incentive programs using gamification. Engage customers with fun, competitive elements for increased loyalty and performance. Partner with FynCom for innovative reward solutions."
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import gamification from '../../images/illustrations/gamification-01.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+  title: "Elevate Engagement with Gamified Rewards",
+  description: "Transform your incentive programs using gamification. Engage customers with fun, competitive elements for increased loyalty and performance. Partner with FynCom for innovative reward solutions."
 };
 
 <Wrapper seo={meta}>
@@ -22,7 +19,7 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   In recent years, gamification has become a popular trend in the world of incentive rewards. But what exactly is gamification, and how can it be used to drive engagement and motivation in rewards programs?
 
-  ![](RackMultipart20231114-1-z39akn_html_b649b6aab0504b34.png)
+  <img src={gamification} alt="gamification is all around us all the time!" />
 
   Gamification is the use of game-based elements and mechanics in non-game contexts, such as business and education. In the context of incentive rewards programs, gamification can involve elements such as points systems, leaderboards, virtual rewards, and more.
 
@@ -30,7 +27,7 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   However, it is important to use gamification in a way that is authentic and meaningful. Simply adding game-based elements for the sake of it may not be effective in driving engagement. Instead, gamification should be integrated into the overall design of the rewards program in a way that aligns with the goals and values of the organization.
 
-  _Take a look at our recent collaboration with Nano Foundation to learn more about how we used gamification to increase translations and drive website traffic_ [_here_](https://www.fyncom.com/post/use-case-how-nano-foundation-uses-fyncom-to-increase-engagement-with-a-wider-audience)_._
+  _Take a look at our recent collaboration with the Nano Foundation to learn more about how we used gamification to increase translations and <Link to={"/blog/effective-use-cases"}>drive web traffic here</Link>._
 
   Another key consideration is to ensure that the gamification elements of the rewards program are balanced and fair. This means setting achievable goals and offering a variety of rewards that appeal to different individuals.
 
