--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Response Mining: The New Frontier of Digital Engagement and Monetization"
 date: "2022-07-31"
-featuredImage: "../../images/illustrations/inbox-money.png"
+featuredImage: "../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png"
 description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
 ---
 
@@ -23,8 +23,6 @@ export const meta = {
 
   I guarantee you've experienced it! All those unknown phone calls, unwanted texts, emails, DMs on social media / chat applications are the symptom of people trying to mine your attention. So who's making the money here and why isn't it you?
 
-  [Why is this an issue?](#viewer-6jkdv)[Why should I care?](#viewer-bq2vm)[My ask to you](#viewer-2bui0)
-
   ## **Why is this an issue?**
 
   1. More businesses are created everyday. Those businesses want your feedback so they can grow and beat the incumbent players in their space.
@@ -44,9 +42,10 @@ export const meta = {
 
   **FynCom was built to answer these questions. Our system does not require Bitcoin or cryptocurrency mining. Instead, we support "Response Mining"** where people get instantly rewarded for responding to emails, texts, calls, surveys and more - while businesses get the engagement they want. Are you ready for the Response Economy?
 
+
+[//]: # (todo: fix this link)
   ## **My ask to you**
 
-[//]: # todo(todo: fix this lin)
   **Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? <Link to={"/subscribe"}>Sign up here to receive rewards emails</Link> that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
 
   [//]: # (turn this into a button)
