--- a/src/pages/blog/future-rewards-technology.mdx
+++ b/src/pages/blog/future-rewards-technology.mdx
@@ -1,16 +1,13 @@
 ---
 title: "Revolutionizing Engagement: The Rise of Interactive Rewards Technology"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+date: "2023-02-23"
+featuredImage: "../../images/blog/interactive-rewards-blog-social-graphic.jpg"
 description: "Unveil the transformative impact of interactive rewards in sales and marketing. Learn how automation and personalization in rewards programs are setting new standards for customer interaction and loyalty."
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import futureRewards from '../../images/blog/interactive-rewards-blog-social-graphic.jpg'
+import incentive from '../../images/blog/incentive-federation-graph-hi-res.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
@@ -23,13 +20,24 @@ export const meta = {
 
   Interactive rewards enhance your sales & marketing strategies. Used correctly, they can become response generation tools to expand your customer base, foster customer loyalty and increase sales. This is now being boosted by technology in an extraordinary way.
 
-  ![](RackMultipart20231114-1-ogtn9_html_f27bb2553eb501d3.jpg)
+  [//]: # (change the size of this image to more appropriate one)
+  <div className="use-case-section">
+    <div className="use-case-image">
+      <img src={futureRewards} alt="The future of customers interactions is in your grasp" />
+    </div>
+    <div className="use-case-description">
+      # The Future of Interactive Rewards and How Technology Is Changing the Game
+
+      Interactive rewards enhance your sales & marketing strategies. Used correctly, they can become response generation tools to expand your customer base, foster customer loyalty and increase sales. This is now being boosted by technology in an extraordinary way.
+    </div>
+  </div>
+
 
   ## **Why are interactive rewards important in a sales strategy?**
 
   It's no secret or news that rewards programs are a great tool for composing marketing strategies and sales funnels at different levels. An [article published in The Magazine](https://hbr.org/1995/05/do-rewards-really-create-loyalty) and replicated in the **Harvard Business Review** (HBR) in 1995 already addressed rewards to foster customer loyalty.
 
-  A [study conducted by the Incentive Federation Inc](https://www.incentivefederation.org/),. found that in 2022, about **$83 Billion** was invested in incentive programs for **distribution channels** , **customer loyalty** and **client gifts** – with more than half of companies increasing their marketing budget for these programs from 2021 to 2022.
+  A [study conducted by the Incentive Federation Inc](https://www.incentivefederation.org/)., found that in 2022, about **$83 Billion** was invested in incentive programs for **distribution channels** , **customer loyalty** and **client gifts** – with more than half of companies increasing their marketing budget for these programs from 2021 to 2022.
 
   The study estimates that 84% of all companies with $1M+ revenue use non-cash incentives in some way. That percentage jumps to 92% for all companies with $5M+ revenue. Of the USA companies surveyed:
 
@@ -37,7 +45,7 @@ export const meta = {
   - **Customer Loyalty Incentives:** 66% reward customers to increase loyalty / spend;
   - **Prospect & Client Gifts:** 75% reward clients & prospects to increase sales.
 
-  ![](RackMultipart20231114-1-ogtn9_html_a76a6b8a4e812bd6.png)
+  <img src={incentive} alt="a chart showing growth in incentive use over time" />
 
   ## **Advances in technology are changing the rules of the game: interactivity, automated gifting systems and e-gifts**
 
@@ -57,10 +65,12 @@ export const meta = {
 
   ## **How do I set up an interactive rewards program?**
 
-  At [FynCom](https://www.fyncom.com/contact), we focus on helping you get closer to your customers while reducing your admin time spent, and decreasing your mental cost. We lead the market with best-in-class tech and ensure that it fits into your existing sales, marketing, & customer success tools. We offer customized interactive incentive and reward solutions for your business.
+  At <Link to={"/contact"}>FynCom</Link>, we focus on helping you get closer to your customers while reducing your admin time spent, and decreasing your mental cost. We lead the market with best-in-class tech and ensure that it fits into your existing sales, marketing, & customer success tools. We offer customized interactive incentive and reward solutions for your business.
 
   To see the power of instant universal rewards in practice, we encourage you to schedule a call with our team, learn about our solutions and be immediately rewarded for it.
 
-  [Schedule your meeting right now, and get your instant reward!](https://calendly.com/adrian-fyncom/15min)
+  <a href="https://calendly.com/adrian-fyncom/30min" className="cta-button">
+    Schedule your meeting right now, and get your instant reward!
+  </a>
 
 </Wrapper>
