updating blog titles / and shortened description preview

--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Navigating the Attention Economy: Captivate and Convert Audiences"
+title: "Attention Economy: Captivate & Convert"
 description: "Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
 date: "2021-11-03"
 featuredImage: "../../images/blog/attention-economy-multi-screens.jpg"
