--- a/src/pages/blog/boost-email-responses.mdx
+++ b/src/pages/blog/boost-email-responses.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates"
+title: "Upgrade Emails: Skyrocket Responses"
 description: "Unlock the secrets to dramatically improving email response rates with targeted strategies. Learn how to refine your delivery, open rates, and engagement for better communication outcomes."
 date: "2022-12-16"
 featuredImage: "../../images/blog/responding-to-a-great-email.png"
