--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Driving Survey Participation: Smart Incentivization Techniques"
+title: "Surveys: Drive Participation with Incentives"
 description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
 date: "2022-01-10"
 featuredImage: "../../images/blog/distracted-boyfriend-exit-survey.jpg"
