--- a/src/pages/blog/effective-use-cases.mdx
+++ b/src/pages/blog/effective-use-cases.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Incentivizing Engagement: The FynCom and Nano Foundation Success Story"
+title: "FynCom & Nano: Engagement Success"
 date: "2022-12-06"
 featuredImage: "../../images/blog/fyncom-nano-foundation-short.png"
 description: "Discover how the Nano Foundation leveraged FynCom's innovative rewards technology to skyrocket translation activity for their multilingual blog, fostering global engagement and enhancing user retention."
@@ -40,7 +40,7 @@ title: "Incentivizing Engagement: The FynCom and Nano Foundation Success Story",
 
   1. Create a {" "}[CrowdIn](https://crowdin.com/){" "}account
   2. Go to the{" "}[FynCom portal](https://app.fyncom.com/settings) and {" "}<Link to="/user-help-center/crowdin-rewards-for-user-translations-setup">input your Crowdin username</Link>.
-  3. Visit the [Nano blog](https://nano.crowdin.com/nano-blog)and start translating
+  3. Visit the [Nano blog](https://nano.crowdin.com/nano-blog) and start translating
 
   The blogs which have FynCom's incentivized rewards attached are
 
