--- a/src/pages/blog/gamify-rewards-program.mdx
+++ b/src/pages/blog/gamify-rewards-program.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Elevate Engagement with Gamified Rewards"
+title: "Boost Engagement: Gamified Rewards"
 date: "2023-01-10"
 featuredImage: "../../images/illustrations/gamification-01.png"
 description: "Transform your incentive programs using gamification. Engage customers with fun, competitive elements for increased loyalty and performance. Partner with FynCom for innovative reward solutions."
