--- a/src/pages/blog/optimize-rewards-analytics.mdx
+++ b/src/pages/blog/optimize-rewards-analytics.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Unlock Business Growth with Data-Driven Incentive Rewards Programs"
+title: "Boost Business with Data-Driven Rewards"
 date: "2023-03-08"
 featuredImage: "../../images/illustrations/create-efficient-costs.png"
 description: "Discover how harnessing data and analytics can revolutionize your incentive rewards initiatives. Dive into our insights on customer behavior analysis, targeted rewards strategies, and key performance metrics to optimize your programs for enhanced customer retention and sales growth. Unleash the full potential of your rewards and loyalty schemes with FynCom, and stay a step ahead in the attention economy."
