--- a/src/pages/blog/response-generation.mdx
+++ b/src/pages/blog/response-generation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Boosting Response Rates: Unleashing the Power of Automated Rewards"
+title: "Boost Responses with Automated Rewards"
 date: "2022-11-29"
 featuredImage: "../../images/blog/feels-good-to-get-responses.gif"
 description: "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably."
