--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Response Mining: The New Frontier of Digital Engagement and Monetization"
+title: "Digital Engagement: Response Mining"
 date: "2022-07-31"
 featuredImage: "../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png"
 description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
