--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Email Scams: Protection Tactics and Profitable Solutions"
+title: "Stop Email Scams with Refunds & Payments"
 description: "Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
 date: "2023-01-04"
 featuredImage: "../../images/illustrations/inbox-money.png"
