updating help center

--- a/src/pages/blog/optimize-rewards-analytics.mdx
+++ b/src/pages/blog/optimize-rewards-analytics.mdx
@@ -19,7 +19,7 @@ description: "Discover how harnessing data and analytics can revolutionize your 
 
   # How data and analytics can optimize incentive rewards programs
 
-  _ **Maximizing results:** _ _Learn how to improve your incentive rewards programs with the power of data and analytics to optimize your strategy and drive growth for your business._
+  _**Maximizing results:** Learn how to improve your incentive rewards programs with the power of data and analytics to optimize your strategy and drive growth for your business._
 
   <img src={createEfficientCosts} alt="make progress by measuring cost per customer response" />
 
