adding buttons to blog

--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -83,8 +83,9 @@ description: "Discover how you can turn the tide on email spam with FynCom's inn
 
   We need your support to make this future happen. We want 1,000 paying FynCom'ers before we'll be able to dedicate time to this and make this a reality. For us, this project can be completed within weeks. We've spent years building our underlying infrastructure and have learned to focus on following the $$. We would really appreciate your support!
 
-  <Link to="/fyncom-filters-email-edition">Click here to buy </Link>
-
+  <div className="button-container">
+    <Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link>
+  </div> <br/>
   Here's the general strategy we are taking.
 
   1. Now: Give you an app that pays you for every email you block
@@ -109,7 +110,9 @@ description: "Discover how you can turn the tide on email spam with FynCom's inn
   4. Spammers use AI & ML too. These tools have been in place since the internet started. We're not here to continue this cat & mouse game. We're here to help the animals evolve & flourish in our global society. Until you address the root cause of the problem, economic incentives, you will never get rid of the symptoms.
   5. Plus we have WAY more fun creating unique, untried methods to address this problem. EXTRA PLUS, we have less infrastructure cost, so we can have higher profit margins.
 
-  <Link to="/fyncom-filters-email-edition">Click here to buy</Link>
+  <div className="button-container">
+    <Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link>
+  </div> <br/>
 
   ## **Author's personal notes**
 
