--- a/src/pages/blog/future-rewards-technology.mdx
+++ b/src/pages/blog/future-rewards-technology.mdx
@@ -69,8 +69,8 @@ export const meta = {
 
   To see the power of instant universal rewards in practice, we encourage you to schedule a call with our team, learn about our solutions and be immediately rewarded for it.
 
-  <a href="https://calendly.com/adrian-fyncom/30min" className="cta-button">
-    Schedule your meeting right now, and get your instant reward!
-  </a>
+  <div className="button-container">
+    <a className="learn-more-btn cash centered" href="https://calendly.com/adrian-fyncom/30min">    Schedule your meeting right now, and get your instant reward!</a>
+  </div> <br/>
 
 </Wrapper>
