--- a/src/pages/blog/response-generation.mdx
+++ b/src/pages/blog/response-generation.mdx
@@ -57,7 +57,9 @@ title: "Boosting Response Rates: Unleashing the Power of Automated Rewards",
 
   That's exactly why FynCom's Rewards Technology was created. If you want to book more meetings, get more responses, and increase your customer engagement... Come set up a meeting with me at the button below!
 
-  [Book a Meeting (and Get Rewarded Instantly!)](https://calendly.com/adrian-fyncom/30min)
+  <div className="button-container">
+    <a className="learn-more-btn cash centered" href="https://calendly.com/adrian-fyncom/30min">Book a Meeting (and Get Rewarded Instantly!)</a>
+  </div>
 
   #### **Quote of the Day**
 
