--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -48,8 +48,9 @@ export const meta = {
 
   **Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? <Link to={"/subscribe"}>Sign up here to receive rewards emails</Link> that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
 
-  [//]: # (turn this into a button)
-  <Link to={"/subscribe"}>Subscribe for more</Link>
+  <div className="button-container">
+    <Link className="learn-more-btn cash centered" to="/subscribe">Subscribe for more!</Link>
+  </div> <br/>
 
   PS - Oh, and we haven't even talked about how to address the actual SCAMS / Fraud that happen through these channels. Stay tuned!
 
