--- a/src/pages/blog/response-economy-strategies.mdx
+++ b/src/pages/blog/response-economy-strategies.mdx
@@ -2,7 +2,8 @@
 title: "Response Economy: Cost-Efficient Engagement"
 date: "2022-03-10"
 featuredImage: "../../images/blog/response-economy-a-fyncom-story.png"
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+description: "If you could get an answer EVERY TIME you reached out to
+someone... What would you pay?"
 topics: "Response Economy"
 ---
 
@@ -13,7 +14,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
   title: "Navigating the Response Economy: Strategies to Lower Costs and Boost Engagement",
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+description: " If you could get an answer EVERY TIME you reached out to someone... What would you pay? Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
 };
 
 <Wrapper seo={meta}>
@@ -39,7 +40,6 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   Understanding analytics and determining what inquiries to respond to will help any business better manage their time while also increasing conversion rates. Understanding who your ideal customer profile is and which communication platform they are most receptive to (i.e., email vs. text message) is important because it helps businesses reach customers where they're at. At the same time, knowing when different people tend to engage with certain platforms gives businesses another thing to keep in mind for managing social media opportunities, which has evolved considerably with this new digital environment.
 
-  [//]: # put in side by side componenet()
   ## **Profit from the Response Economy**
 
   <div className="use-case-section">
