slight description updates

--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Stop Email Scams with Refunds & Payments"
-description: "Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
+description: "Get cash back for blocking spam emails! Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
 date: "2023-01-04"
 featuredImage: "../../images/illustrations/inbox-money.png"
 ---
@@ -11,7 +11,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper"
 
 export const meta = {
 title: "Email Scams: Protection Tactics and Profitable Solutions",
-description: "Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
+description: "Get cash back for blocking spam emails! Discover how you can stop email scams with FynCom's innovative whitelist tool + get rewarded for every scam email blocked. It's time to declutter your inbox and get paid for it!"
 };
 
 <Wrapper seo={meta}>
