--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Surveys: Drive Participation with Incentives"
-description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
+description: "Improve exit survey rates by instantly rewarding cryptocurrency incentives to approved people as soon as they complete the exit survey."
 date: "2022-01-10"
 featuredImage: "../../images/blog/distracted-boyfriend-exit-survey.jpg"
 ---
@@ -14,7 +14,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
 title: "Driving Survey Participation: Smart Incentivization Techniques",
-description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
+description: "Improve exit survey rates by instantly rewarding cryptocurrency incentives to approved people as soon as they complete the exit survey. Modernize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
 };
 
 <Wrapper seo={meta}>
