--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Attention Economy: Captivate & Convert"
-description: "Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
+description: "The average American spends 363 minutes per day
+consuming digital media. Yes, you read that right: 363
+minutes daily. In those 363... Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
 date: "2021-11-03"
 featuredImage: "../../images/blog/attention-economy-multi-screens.jpg"
 ---
@@ -12,7 +14,7 @@ import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
   title: "Navigating the Attention Economy: Captivate and Convert Audiences",
-  description: "Position your brand at the forefront of the digital age. Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
+  description: "The average American spends 363 minutes per day consuming digital media. Yes, you read that right: 363 minutes! How will you position your brand at the forefront of the digital age? Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
 };
 
 <Wrapper seo={meta}>
